[ci skip] Fix markdown cell markers 8a8301bfb4165e54630b8b1b9587abf641ac9599

--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -1,50 +1,47 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "654f041a",
+   "cell_type": "markdown",
+   "id": "7ab45795",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # %% [markdown]\n",
-    "# # Direct vs Recursive Forecasting\n",
-    "#\n",
-    "# The purpose of this notebook is to compare the performance of direct\n",
-    "# forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
-    "# forecasting means that we train a family of model to predict the target value\n",
-    "# at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
-    "# Recursive forecasting means that we train a single model to predict the\n",
-    "# target value at the next time step, and then use the model recursively to\n",
-    "# predict the next time step using the previous predictions as input features.\n",
-    "# Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
-    "# we use the `MLForecast` library to handle this for us.\n",
-    "#\n",
-    "# The objective is to show that recursive forecasting can be more efficient in\n",
-    "# terms of memory usage and training time. However, it can also lead to a loss\n",
-    "# of accuracy because recursive calls are fed with previous predictions that do\n",
-    "# not necessarily match the training distribution of the model, and can\n",
-    "# therefore lead to degenerate predictions, in particular when the variance of\n",
-    "# the lagged values is informative.\n",
-    "#\n",
-    "# We highlight this issue with a synthetic dataset that has two types of\n",
-    "# segments:\n",
-    "#\n",
-    "# - Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
-    "#   suffix centered around 1.\n",
-    "# - Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
-    "#   suffix centered around -1.\n",
-    "#\n",
-    "# Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
-    "# possible to forecast beyond the length of the segments. However, it should be\n",
-    "# quite easy to predict the end of a segment given the prefix of the segment\n",
-    "# with lagged feature engineering."
+    "# Direct vs Recursive Forecasting\n",
+    "\n",
+    "The purpose of this notebook is to compare the performance of direct\n",
+    "forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
+    "forecasting means that we train a family of model to predict the target value\n",
+    "at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
+    "Recursive forecasting means that we train a single model to predict the\n",
+    "target value at the next time step, and then use the model recursively to\n",
+    "predict the next time step using the previous predictions as input features.\n",
+    "Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
+    "we use the `MLForecast` library to handle this for us.\n",
+    "\n",
+    "The objective is to show that recursive forecasting can be more efficient in\n",
+    "terms of memory usage and training time. However, it can also lead to a loss\n",
+    "of accuracy because recursive calls are fed with previous predictions that do\n",
+    "not necessarily match the training distribution of the model, and can\n",
+    "therefore lead to degenerate predictions, in particular when the variance of\n",
+    "the lagged values is informative.\n",
+    "\n",
+    "We highlight this issue with a synthetic dataset that has two types of\n",
+    "segments:\n",
+    "\n",
+    "- Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
+    "  suffix centered around 1.\n",
+    "- Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
+    "  suffix centered around -1.\n",
+    "\n",
+    "Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
+    "possible to forecast beyond the length of the segments. However, it should be\n",
+    "quite easy to predict the end of a segment given the prefix of the segment\n",
+    "with lagged feature engineering."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43cf121",
+   "id": "04dc7656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28789642",
+   "id": "ed6c9ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d9a159",
+   "id": "690b3a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d956f0c",
+   "id": "e8f2e2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d47769e",
+   "id": "db6c987a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -235,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6d5212",
+   "id": "ecc8f449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871253dc",
+   "id": "4bfa8c21",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20db1809",
+   "id": "55bb191f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -293,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3523b81",
+   "id": "36e2a189",
    "metadata": {},
    "outputs": [],
    "source": []
