--- a/_sources/content/notebooks/fetch_weather_data.ipynb
+++ b/_sources/content/notebooks/fetch_weather_data.ipynb
@@ -1,28 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3add775",
+   "cell_type": "markdown",
+   "id": "1ae06c8e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # %% [markdown]\n",
-    "# # Historical weather data download from open-meteo.com\n",
-    "# \n",
-    "# This notebook downloads historical weather data for 10 medium to large urban\n",
-    "# areas in France from the Open Meteo Historical Forecast API. The data is\n",
-    "# saved in a Parquet file in the `datasets` folder.\n",
-    "#\n",
-    "# Since calling the API is slow and can reach rate limits quite easily with\n",
-    "# free accounts, we use a cache to avoid downloading the same data multiple\n",
-    "# times."
+    "# Historical weather data download from open-meteo.com\n",
+    "\n",
+    "This notebook downloads historical weather data for 10 medium to large urban\n",
+    "areas in France from the Open Meteo Historical Forecast API. The data is\n",
+    "saved in a Parquet file in the `datasets` folder.\n",
+    "\n",
+    "Since calling the API is slow and can reach rate limits quite easily with\n",
+    "free accounts, we use a cache to avoid downloading the same data multiple\n",
+    "times."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c07208a1",
+   "id": "ee3e6abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd434ad5",
+   "id": "70de3899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d88b1dc",
+   "id": "7d6fae8d",
    "metadata": {},
    "source": [
     "\n",
@@ -63,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956d58e7",
+   "id": "0af18aed",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940fd190",
+   "id": "2c851c46",
    "metadata": {},
    "source": [
     "\n",
@@ -104,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a22637",
+   "id": "8bd6ab9c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2a48a3",
+   "id": "da621dab",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -180,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ca4840",
+   "id": "01134ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "178573f9",
+   "id": "b37141be",
    "metadata": {},
    "outputs": [],
    "source": []
