--- a/jupyterlite/files/notebooks/fetch_weather_data.ipynb
+++ b/jupyterlite/files/notebooks/fetch_weather_data.ipynb
@@ -1,28 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac34a431",
+   "cell_type": "markdown",
+   "id": "dd4e10ba",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # %% [markdown]\n",
-    "# # Historical weather data download from open-meteo.com\n",
-    "# \n",
-    "# This notebook downloads historical weather data for 10 medium to large urban\n",
-    "# areas in France from the Open Meteo Historical Forecast API. The data is\n",
-    "# saved in a Parquet file in the `datasets` folder.\n",
-    "#\n",
-    "# Since calling the API is slow and can reach rate limits quite easily with\n",
-    "# free accounts, we use a cache to avoid downloading the same data multiple\n",
-    "# times."
+    "# Historical weather data download from open-meteo.com\n",
+    "\n",
+    "This notebook downloads historical weather data for 10 medium to large urban\n",
+    "areas in France from the Open Meteo Historical Forecast API. The data is\n",
+    "saved in a Parquet file in the `datasets` folder.\n",
+    "\n",
+    "Since calling the API is slow and can reach rate limits quite easily with\n",
+    "free accounts, we use a cache to avoid downloading the same data multiple\n",
+    "times."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee4c2ea8",
+   "id": "eca99d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6376b8c",
+   "id": "f4a02bdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbe37ac7",
+   "id": "80fdf93c",
    "metadata": {},
    "source": [
     "\n",
@@ -63,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53f4f14",
+   "id": "4d6c581b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "859bd7b8",
+   "id": "6dce52c6",
    "metadata": {},
    "source": [
     "\n",
@@ -104,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b202ef",
+   "id": "840baddd",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d9811a6",
+   "id": "b62ec31c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -180,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd19057",
+   "id": "ee7cc8e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e4ad31",
+   "id": "d3a63057",
    "metadata": {},
    "outputs": [],
    "source": []
