--- a/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -1,50 +1,47 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7e3fc1a",
+   "cell_type": "markdown",
+   "id": "ecbd3a5b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # %% [markdown]\n",
-    "# # Direct vs Recursive Forecasting\n",
-    "#\n",
-    "# The purpose of this notebook is to compare the performance of direct\n",
-    "# forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
-    "# forecasting means that we train a family of model to predict the target value\n",
-    "# at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
-    "# Recursive forecasting means that we train a single model to predict the\n",
-    "# target value at the next time step, and then use the model recursively to\n",
-    "# predict the next time step using the previous predictions as input features.\n",
-    "# Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
-    "# we use the `MLForecast` library to handle this for us.\n",
-    "#\n",
-    "# The objective is to show that recursive forecasting can be more efficient in\n",
-    "# terms of memory usage and training time. However, it can also lead to a loss\n",
-    "# of accuracy because recursive calls are fed with previous predictions that do\n",
-    "# not necessarily match the training distribution of the model, and can\n",
-    "# therefore lead to degenerate predictions, in particular when the variance of\n",
-    "# the lagged values is informative.\n",
-    "#\n",
-    "# We highlight this issue with a synthetic dataset that has two types of\n",
-    "# segments:\n",
-    "#\n",
-    "# - Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
-    "#   suffix centered around 1.\n",
-    "# - Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
-    "#   suffix centered around -1.\n",
-    "#\n",
-    "# Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
-    "# possible to forecast beyond the length of the segments. However, it should be\n",
-    "# quite easy to predict the end of a segment given the prefix of the segment\n",
-    "# with lagged feature engineering."
+    "# Direct vs Recursive Forecasting\n",
+    "\n",
+    "The purpose of this notebook is to compare the performance of direct\n",
+    "forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
+    "forecasting means that we train a family of model to predict the target value\n",
+    "at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
+    "Recursive forecasting means that we train a single model to predict the\n",
+    "target value at the next time step, and then use the model recursively to\n",
+    "predict the next time step using the previous predictions as input features.\n",
+    "Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
+    "we use the `MLForecast` library to handle this for us.\n",
+    "\n",
+    "The objective is to show that recursive forecasting can be more efficient in\n",
+    "terms of memory usage and training time. However, it can also lead to a loss\n",
+    "of accuracy because recursive calls are fed with previous predictions that do\n",
+    "not necessarily match the training distribution of the model, and can\n",
+    "therefore lead to degenerate predictions, in particular when the variance of\n",
+    "the lagged values is informative.\n",
+    "\n",
+    "We highlight this issue with a synthetic dataset that has two types of\n",
+    "segments:\n",
+    "\n",
+    "- Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
+    "  suffix centered around 1.\n",
+    "- Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
+    "  suffix centered around -1.\n",
+    "\n",
+    "Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
+    "possible to forecast beyond the length of the segments. However, it should be\n",
+    "quite easy to predict the end of a segment given the prefix of the segment\n",
+    "with lagged feature engineering."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de241f2b",
+   "id": "726bdb26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39650b1",
+   "id": "e9967acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c937c8b4",
+   "id": "d200fb5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56636a47",
+   "id": "622d21df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1859df67",
+   "id": "089bc632",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -235,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd92c6f",
+   "id": "b1f99fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf22522e",
+   "id": "2565ea46",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6779707f",
+   "id": "cd44cba7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -293,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75eea9e5",
+   "id": "6e119138",
    "metadata": {},
    "outputs": [],
    "source": []
