[ci skip] Add darts as a dependency a5f4ecd51b531798edbe04ef048143216fadf67f

--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ab45795",
+   "id": "c56ec4f3",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -11,11 +11,12 @@
     "forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
     "forecasting means that we train a family of model to predict the target value\n",
     "at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
-    "Recursive forecasting means that we train a single model to predict the\n",
-    "target value at the next time step, and then use the model recursively to\n",
-    "predict the next time step using the previous predictions as input features.\n",
-    "Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
-    "we use the `MLForecast` library to handle this for us.\n",
+    "Recursive forecasting (also known as auto-regressive forecasting) means that\n",
+    "we train a single model to predict the target value at the next time step,\n",
+    "and then use the model recursively to predict the next time step using the\n",
+    "previous predictions as input features. Implementing recursive forecasting is\n",
+    "a bit cumbersome to do manually, hence we use the `MLForecast` library to\n",
+    "handle this for us.\n",
     "\n",
     "The objective is to show that recursive forecasting can be more efficient in\n",
     "terms of memory usage and training time. However, it can also lead to a loss\n",
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04dc7656",
+   "id": "c3032653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed6c9ec3",
+   "id": "92f37128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690b3a3e",
+   "id": "78373a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f2e2c0",
+   "id": "2c0f0674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6c987a",
+   "id": "1d65db68",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -232,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc8f449",
+   "id": "32584525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfa8c21",
+   "id": "9e50907d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -266,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55bb191f",
+   "id": "c9efd958",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -290,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e2a189",
+   "id": "8bf84ad8",
    "metadata": {},
    "outputs": [],
    "source": []
