[ci skip] Fix execution timeout in direct_vs_recursive_forecasting.py 1c5ff84f43d1212d4d7e4fbea78a6a32b789c0b5

--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c56ec4f3",
+   "id": "935f6a31",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3032653",
+   "id": "3d0c5889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "    )\n",
     "\n",
     "\n",
-    "data = generate_synthetic_1(n_segments=1000, seed=1)\n",
+    "data = generate_synthetic_1(n_segments=500, seed=1)\n",
     "cutoff = -SEGMENT_LENGTH * 10  # 10 segments for testing\n",
     "data_train = data.iloc[:cutoff]\n",
     "data_test = data.iloc[cutoff:]\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f37128",
+   "id": "ffe7083e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78373a97",
+   "id": "850f9b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,8 +159,10 @@
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "import warnings\n",
+    "import threadpoolctl\n",
     "\n",
-    "\n",
+    "# Workaround a performance problem with HistGradientBoostingRegressor on small datasets.\n",
+    "threadpoolctl.threadpool_limits(limits=1, user_api=\"openmp\")\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning, module=\"sklearn\")\n",
     "\n",
     "\n",
@@ -211,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0f0674",
+   "id": "8dbe6e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d65db68",
+   "id": "09b58d7c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -233,10 +235,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32584525",
-   "metadata": {},
+   "id": "0b05c178",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
+    "%%time\n",
     "# mlf.fit(data_train, max_horizon=PREDICTION_HORIZON, **schema) # direct forecasting\n",
     "mlf.fit(data_train, **schema)  # recursive forecasting"
    ]
@@ -244,12 +249,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e50907d",
+   "id": "c8f88bbc",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "test_offset = 0\n",
     "\n",
     "all_predictions = []\n",
@@ -267,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9efd958",
+   "id": "83c94998",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf84ad8",
+   "id": "41bfcf9c",
    "metadata": {},
    "outputs": [],
    "source": []
