--- a/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f390658",
+   "id": "44224e63",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d64cf7",
+   "id": "6855336f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "    )\n",
     "\n",
     "\n",
-    "data = generate_synthetic_1(n_segments=1000, seed=1)\n",
+    "data = generate_synthetic_1(n_segments=500, seed=1)\n",
     "cutoff = -SEGMENT_LENGTH * 10  # 10 segments for testing\n",
     "data_train = data.iloc[:cutoff]\n",
     "data_test = data.iloc[cutoff:]\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec23138",
+   "id": "721fbd71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34616e65",
+   "id": "afc4eb1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,8 +159,10 @@
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "import warnings\n",
+    "import threadpoolctl\n",
     "\n",
-    "\n",
+    "# Workaround a performance problem with HistGradientBoostingRegressor on small datasets.\n",
+    "threadpoolctl.threadpool_limits(limits=1, user_api=\"openmp\")\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning, module=\"sklearn\")\n",
     "\n",
     "\n",
@@ -211,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90cf9ed5",
+   "id": "bbe84eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3b8565",
+   "id": "aa3d1d41",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -233,10 +235,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e80cdb0f",
-   "metadata": {},
+   "id": "27886cf0",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
+    "%%time\n",
     "# mlf.fit(data_train, max_horizon=PREDICTION_HORIZON, **schema) # direct forecasting\n",
     "mlf.fit(data_train, **schema)  # recursive forecasting"
    ]
@@ -244,12 +249,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70e98c77",
+   "id": "280ae938",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "test_offset = 0\n",
     "\n",
     "all_predictions = []\n",
@@ -267,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b43bdf6",
+   "id": "6b9c6578",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753e4c22",
+   "id": "20cee280",
    "metadata": {},
    "outputs": [],
    "source": []
