[ci skip] Analyse outlier in load IQR df4431127c2743de089b145f4b65ad72d7a70c03

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2950cf43",
+   "id": "e7526d69",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdffa4d",
+   "id": "4a9b90c1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047143ba",
+   "id": "81a68729",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0401d918",
+   "id": "34a457dd",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e635fb0e",
+   "id": "a7534eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc964ab4",
+   "id": "2568f643",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dc832b7",
+   "id": "c920667b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21564e73",
+   "id": "57d605aa",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4aeefa6",
+   "id": "05dbf002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6632e4eb",
+   "id": "9b6896a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92af62f6",
+   "id": "761c6dfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b59703",
+   "id": "f71d5654",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a86475",
+   "id": "ccf2a241",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f30a4fc6",
+   "id": "73f2d8ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb716d1e",
+   "id": "97e5287b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d26f91c",
+   "id": "bfa34913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c354ed2e",
+   "id": "733159cd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad95fa7",
+   "id": "c93e3089",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb746e8b",
+   "id": "6ca718e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae31d5c0",
+   "id": "97f36479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d3b0c6",
+   "id": "bf86e5d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a09035b",
+   "id": "d3207a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b6ff079",
+   "id": "c1b5b1b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07184aff",
+   "id": "8c71b20a",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "631979c2",
+   "id": "e9165f9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58263473",
+   "id": "380143c1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ad9cc5",
+   "id": "351377df",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53cd38f",
+   "id": "f1a3179b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f772b39c",
+   "id": "636096c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
     "\n",
     "\n",
     "altair.Chart(\n",
-    "    time.join(electricity_lagged, on=\"time\", how=\"inner\").tail(100).skb.eval()\n",
+    "    electricity_lagged.tail(100).skb.eval()\n",
     ").transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
@@ -498,7 +498,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09228eb",
+   "id": "839b2078",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "from skrub import TableReport\n",
+    "\n",
+    "TableReport(electricity_lagged.skb.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2be5915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electricity_lagged.filter(pl.col(\"load_mw_iqr_7d\") > 15_000)[\n",
+    "    \"time\"\n",
+    "].dt.date().unique().sort().to_list().skb.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a92bbc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_weather.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    ").skb.eval().plot.line(\n",
+    "    x=\"time:T\",\n",
+    "    y=\"temperature_2m_paris:Q\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d0b3c97",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    electricity_lagged.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    "    ).skb.eval()\n",
+    ").transform_fold(\n",
+    "    [\n",
+    "        \"load_mw\",\n",
+    "        \"load_mw_iqr_7d\",\n",
+    "    ],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "770a656e",
    "metadata": {},
    "outputs": [],
    "source": []
