--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "77d62109",
+   "id": "9e7c9aa7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8479a089",
+   "id": "524c1b59",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e05bf2b",
+   "id": "b6d39539",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0280a77a",
+   "id": "95e16026",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92bd6fff",
+   "id": "b4150b5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f65928",
+   "id": "c8654ef1",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e893abc",
+   "id": "a85290ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fef689f",
+   "id": "f1aa3a31",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ed7963",
+   "id": "dbee2187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09040900",
+   "id": "c96dda6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4640761",
+   "id": "9005c5f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68873f07",
+   "id": "2622385e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ae31d7",
+   "id": "31f42aee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39726206",
+   "id": "b7cbc690",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501a7da4",
+   "id": "7c0a3ffe",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d18634",
+   "id": "3551f2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1848b1d",
+   "id": "a878584d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76823c09",
+   "id": "73042417",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8e15c9",
+   "id": "427cf585",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4d648d",
+   "id": "03aaedf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626560e1",
+   "id": "abbbb5ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9592293",
+   "id": "0427e908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5968328",
+   "id": "3eb7313d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d13fa3",
+   "id": "3f95dc22",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91bc23e5",
+   "id": "f62827ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0943268c",
+   "id": "8f75aa60",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c22122",
+   "id": "df930a43",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdfe5ed",
+   "id": "d936b4a3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d93d6e09",
+   "id": "d26e9915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
     "\n",
     "\n",
     "altair.Chart(\n",
-    "    time.join(electricity_lagged, on=\"time\", how=\"inner\").tail(100).skb.eval()\n",
+    "    electricity_lagged.tail(100).skb.eval()\n",
     ").transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
@@ -498,7 +498,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74ff0c95",
+   "id": "5bef1522",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "from skrub import TableReport\n",
+    "\n",
+    "TableReport(electricity_lagged.skb.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64a2065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electricity_lagged.filter(pl.col(\"load_mw_iqr_7d\") > 15_000)[\n",
+    "    \"time\"\n",
+    "].dt.date().unique().sort().to_list().skb.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "545b7dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_weather.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    ").skb.eval().plot.line(\n",
+    "    x=\"time:T\",\n",
+    "    y=\"temperature_2m_paris:Q\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "968a6c81",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    electricity_lagged.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    "    ).skb.eval()\n",
+    ").transform_fold(\n",
+    "    [\n",
+    "        \"load_mw\",\n",
+    "        \"load_mw_iqr_7d\",\n",
+    "    ],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d175d379",
    "metadata": {},
    "outputs": [],
    "source": []
